# spotify-parser

./: .gitignore  CMakeLists.txt  README.md  parser
include/: history.hpp
src/: history.cpp  main.cpp
